<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/title_tiles"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/txt_title" />
        <Button
            android:id="@+id/btn_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/remove" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_light" />

    <LinearLayout
        android:id="@+id/ll_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/stress_icon_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:id="@+id/stress_service_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_stress_track"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/stress_track"/>
                <Button
                    android:id="@+id/btn_stress_trend"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/stress_trend"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/water_icon_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <TextView
                    android:id="@+id/water_service_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btn_water_trend"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/water_track" />
                <Button
                    android:id="@+id/btn_water_track"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/water_trend" />
                <Button
                    android:id="@+id/btn_water_target"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/button_text_size"
                    android:text="@string/water_target" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
